[package]
name = "backend-rustless"
version = "0.1.0"
authors = ["Olle Kvarnström <olle+git@iix.se>"]

[dependencies]
env_logger = "0.5.10"
log = "0.4.0"
actix-web = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
postgres = { version = "0.15", features = ["with-chrono"] }
futures = "0.1.21"      # Low version due to tokio-core
